# oc-cuda-arrnd-header

./: .clang-format  CMakeLists.txt  README.md
benchmark/: cuda-arrnd-header.cpp  main.cpp
include/oc/: cuda-arrnd-header.h
src/oc/: cuda-arrnd-header.cu
tests/: cuda-arrnd-header.cpp  oc-cuda-arrnd-header.cpp
